<resources>
    <string name="appbar_scrolling_view_behavior" translatable="false">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="app_name">Hans</string>
    <string name="action_settings">Settings</string>
    <string name="just_sign_in">Hejka!\nZaloguj się za pomocą\nkonta Google i zacznij pracę!</string>
    <string name="price">Cena</string>
    <string name="description">Opis</string>
    <string name="pickupAddress">Adres początkowy</string>
    <string name="deliveryAddress">Adres docelowy</string>
    <string name="measurments">Wymiary</string>
    <string name="weight">Waga</string>
    <string name="sign_in">Zaloguj się</string>
    <string name="title_activity_maps">Map</string>
</resources>
