<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="10dp"
    android:paddingBottom="10dp">

        <ImageView
            android:id="@+id/image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginRight="10dp"
            android:contentDescription="Property Image" />

        <LinearLayout
            android:id="@+id/infoSection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/image"
            android:orientation="vertical">

                <TextView
                    android:id="@+id/price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text="@string/price"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text="@string/description"
                    android:textSize="15sp" />
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/addressSection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/infoSection"
            android:orientation="vertical">

                <TextView
                    android:id="@+id/pickupAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text="@string/pickupAddress" />

                <TextView
                    android:id="@+id/deliveryAddress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/pickupAddress"
                    android:layout_marginBottom="15dp"
                    android:text="@string/deliveryAddress" />

                <TextView
                    android:id="@+id/weight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/deliveryAddress"
                    android:layout_marginRight="15dp"
                    android:text="@string/weight" />

                <TextView
                    android:id="@+id/measurments"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/deliveryAddress"
                    android:layout_toRightOf="@id/weight"
                    android:layout_marginRight="15dp"
                    android:text="@string/measurments" />

        </RelativeLayout>

</RelativeLayout>